Setting image width to max-width to avoid over stretching images

--- a/themes/gecko5/css/screen.css
+++ b/themes/gecko5/css/screen.css
@@ -587,7 +587,7 @@ aside.flash-success a
 }
 
 #content.site.index img {
-	width: 100%;
+	max-width: 100%;
 }
 
 /*
